# sync

./: .gitignore  Cargo.toml  config.json  readme.md
candid/: dswap-storage.did  token-registry.did  token.did  wicp.did
src/: main.rs  types.rs
