[package]
name = "tt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.4"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
ic-agent = "0.7.0"
tokio = { version = "1.8.1", features = ["full"] }
rusqlite = "0.25.3"